# electric_vehicle_charging_planning

./: .env.example  .gitignore  CITATION.cff  COMMERCIAL-LICENSE.md  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
docs/: CHANGELOG.md  CONTRIBUTING.md  architecture.md
evroute_serve/: __init__.py  server.py  visualize.py
evroute_serve/templates/: index.html
research/: cross_route_eval.py  cross_route_full.py  generate_report.py  run_all_experiments.py
src/evroute/: __init__.py  cli.py  config.py  registry.py  version.py
src/evroute/agents/: __init__.py  base.py  baselines.py  dqn.py  loop.py  ppo.py  runner.py
src/evroute/data/: __init__.py  loader.py  secrets.py
src/evroute/data/processed/: Ankara-Antalya_elevation.json
src/evroute/data/sources/: __init__.py  detour_vis.py  google_elevation.py  google_routes.py  openchargemap.py  realdata.py
src/evroute/env/: __init__.py  charging_env.py  factory.py  spaces.py
src/evroute/models/: __init__.py  charging.py  driver.py  elevation.py  traffic.py  vehicle.py  weather.py
src/evroute/reward/: __init__.py  base.py  default_reward.py
tests/: test_smoke.py
